fix horizontal overflow issue

--- a/src/sass/navigation.scss
+++ b/src/sass/navigation.scss
@@ -4,7 +4,7 @@ body{
 
 section{
   height:100vh;
-  width:100vw;
+  width:100%;
   scroll-snap-align: start;
 }
 
