--- a/src/sass/page.scss
+++ b/src/sass/page.scss
@@ -1,6 +1,6 @@
 .top{
   height:50vh;
-  width:100vw;
+  width:100%;
   overflow:hidden;
   display:flex;
   // flex-direction:column;
@@ -8,6 +8,7 @@
   position:relative;
   img{
     object-fit:cover;
+    // width:100%;
     // align-self:flex-end;
   }
   .banner{
@@ -15,14 +16,14 @@
     top:50%;
     transform:translateY(-50%);
     background-color:rgba(0,0,0,0.5);
-    width:100%;
+    // width:100%;
     text-align:center;
     padding:10px;
   }
 }
 .bottom{
   height:50vh;
-  width:100vw;
+  width:100%;
   display:flex;
   flex-direction:column;
   align-items:center;
