--- a/src/sass/typography.scss
+++ b/src/sass/typography.scss
@@ -7,7 +7,7 @@ html{
 h1{
   font-size:3rem;
   font-family: $header-font;
-  text-transform: uppercase;
+  // text-transform: uppercase;
 }
 
 h2{
